--- a/sections/faq.liquid
+++ b/sections/faq.liquid
@@ -1,4 +1,12 @@
-{%- if section.blocks.size > 0 -%}
+{% assign isTrouve = false %}
+    {%- for block in section.blocks -%}
+      {% if block.settings.title != blank or block.settings.answer != blank%}
+        {% assign isTrouve = true %}
+      {%endif%}
+    {% endfor %}
+
+
+{%- if section.blocks.size > 0 and isTrouve-%}
   <div class="section-spacing {% if section.settings.separate_section_with_border %}bordered-section{% endif %}">
     <div class="container container--md">
       <div class="section-stack">
