--- a/sections/video.liquid
+++ b/sections/video.liquid
@@ -1,74 +1,86 @@
-<div class="content-over-media content-over-media--{{ section.settings.video_size }}" style="{% render 'surface', text_color: section.settings.text_color %}">
-  {%- assign poster_image = section.settings.poster | default: section.settings.video.preview_image -%}
+{% assign renderSection = false %}
+{%if section.settings.poster != blank or section.settings.video != blank  %}
+  {% assign renderSection = true %}
+{%else%}
+  {%- for block in section.blocks -%}
+    {% if block.settings.text != blank or block.settings.content != blank %}
+      {% assign renderSection = true %}
+    {%endif%}
+  {% endfor %}
+{%endif%}
 
-  {%- capture poster -%}
-    {%- unless section.settings.autoplay -%}
-      {%- if poster_image != blank -%}
-        {{- poster_image | image_url: width: poster_image.width | image_tag: loading: 'lazy', sizes: '100vw', widths: '200,300,400,500,600,700,800,900,1000,1200,1400,1600,1800,2000,2200,2400,2600,2800,3000,3200' -}}
-      {%- else -%}
-        {{- 'lifestyle-1' | placeholder_svg_tag: 'h-full w-full placeholder placeholder--invert' | replace: '<svg', '<svg preserveAspectRatio="xMinYMin slice"' -}}
-      {%- endif -%}
-    {%- endunless -%}
-  {%- endcapture -%}
+{% if renderSection %}
+  <div class="content-over-media content-over-media--{{ section.settings.video_size }}" style="{% render 'surface', text_color: section.settings.text_color %}">
+    {%- assign poster_image = section.settings.poster | default: section.settings.video.preview_image -%}
 
-  {%- if section.settings.video -%}
-    <video-media {% if section.settings.autoplay %}autoplay{% endif %} style="--aspect-ratio: {{ section.settings.video.aspect_ratio }}">
-      {{- poster -}}
-      {{- section.settings.video | video_tag: class: 'object-cover', controls: section.settings.show_controls, playsinline: true, muted: section.settings.autoplay, loop: section.settings.autoplay, preload: 'metadata', image_size: '400x' -}}
-    </video-media>
-  {%- else -%}
-    <video-media host="{{ section.settings.external_video_url.type }}" {% if section.settings.autoplay %}autoplay class="pointer-events-none"{% endif %}>
-      {{- poster -}}
-
-      <template>
-        {%- if section.settings.external_video_url.type == 'youtube' -%}
-          <iframe src="https://www.youtube.com/embed/{{ section.settings.external_video_url.id }}?playsinline=1&{% if section.settings.autoplay %}autoplay=1&controls=0&mute=1&loop=1&{% endif %}playlist={{ section.settings.external_video_url.id }}&enablejsapi=1&rel=0&modestbranding=1&origin={{ 'https://' | append: request.host | url_encode }}" allow="autoplay; encrypted-media" allowfullscreen="allowfullscreen"></iframe>
-        {%- elsif section.settings.external_video_url.type == 'vimeo' -%}
-          <iframe src="https://player.vimeo.com/video/{{ section.settings.external_video_url.id }}?autopause=1&{% if section.settings.autoplay %}background=1&autoplay=1&loop=1&muted=1&{% endif %}transparent=0&responsive=1&portrait=0&title=0&byline=0&color={{ settings.text_color | remove_first: '#' }}" allow="autoplay; encrypted-media;" allowfullscreen="allowfullscreen"></iframe>
+    {%- capture poster -%}
+      {%- unless section.settings.autoplay -%}
+        {%- if poster_image != blank -%}
+          {{- poster_image | image_url: width: poster_image.width | image_tag: loading: 'lazy', sizes: '100vw', widths: '200,300,400,500,600,700,800,900,1000,1200,1400,1600,1800,2000,2200,2400,2600,2800,3000,3200' -}}
+        {%- else -%}
+          {{- 'lifestyle-1' | placeholder_svg_tag: 'h-full w-full placeholder placeholder--invert' | replace: '<svg', '<svg preserveAspectRatio="xMinYMin slice"' -}}
         {%- endif -%}
-      </template>
-    </video-media>
-  {%- endif -%}
+      {%- endunless -%}
+    {%- endcapture -%}
 
-  {%- if section.blocks.size > 0 -%}
-    <div class="place-self-center text-center">
-      <div class="prose">
-        {%- for block in section.blocks -%}
-          {%- case block.type -%}
-            {%- when 'play' -%}
-              {%- unless section.settings.autoplay -%}
-                <button class="play-button" type="button" {{ block.shopify_attributes }}>
-                  <span class="sr-only">{{ 'general.accessibility.play_video' | t }}</span>
+    {%- if section.settings.video -%}
+      <video-media {% if section.settings.autoplay %}autoplay{% endif %} style="--aspect-ratio: {{ section.settings.video.aspect_ratio }}">
+        {{- poster -}}
+        {{- section.settings.video | video_tag: class: 'object-cover', controls: section.settings.show_controls, playsinline: true, muted: section.settings.autoplay, loop: section.settings.autoplay, preload: 'metadata', image_size: '400x' -}}
+      </video-media>
+    {%- else -%}
+      <video-media host="{{ section.settings.external_video_url.type }}" {% if section.settings.autoplay %}autoplay class="pointer-events-none"{% endif %}>
+        {{- poster -}}
 
-                  <svg fill="none" width="48" height="48" viewBox="0 0 48 48">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M48 24c0 13.255-10.745 24-24 24S0 37.255 0 24 10.745 0 24 0s24 10.745 24 24Zm-18 0-9-6.6v13.2l9-6.6Z" fill="{{ block.settings.icon_color }}"/>
-                  </svg>
-                </button>
-              {%- endunless -%}
+        <template>
+          {%- if section.settings.external_video_url.type == 'youtube' -%}
+            <iframe src="https://www.youtube.com/embed/{{ section.settings.external_video_url.id }}?playsinline=1&{% if section.settings.autoplay %}autoplay=1&controls=0&mute=1&loop=1&{% endif %}playlist={{ section.settings.external_video_url.id }}&enablejsapi=1&rel=0&modestbranding=1&origin={{ 'https://' | append: request.host | url_encode }}" allow="autoplay; encrypted-media" allowfullscreen="allowfullscreen"></iframe>
+          {%- elsif section.settings.external_video_url.type == 'vimeo' -%}
+            <iframe src="https://player.vimeo.com/video/{{ section.settings.external_video_url.id }}?autopause=1&{% if section.settings.autoplay %}background=1&autoplay=1&loop=1&muted=1&{% endif %}transparent=0&responsive=1&portrait=0&title=0&byline=0&color={{ settings.text_color | remove_first: '#' }}" allow="autoplay; encrypted-media;" allowfullscreen="allowfullscreen"></iframe>
+          {%- endif -%}
+        </template>
+      </video-media>
+    {%- endif -%}
 
-            {%- when 'subheading' -%}
-              {%- if block.settings.text != blank -%}
-                <p class="h6" {{ block.shopify_attributes }}>{{ block.settings.text }}</p>
-              {%- endif -%}
+    {%- if section.blocks.size > 0 -%}
+      <div class="place-self-center text-center">
+        <div class="prose">
+          {%- for block in section.blocks -%}
+            {%- case block.type -%}
+              {%- when 'play' -%}
+                {%- unless section.settings.autoplay -%}
+                  <button class="play-button" type="button" {{ block.shopify_attributes }}>
+                    <span class="sr-only">{{ 'general.accessibility.play_video' | t }}</span>
 
-            {%- when 'heading' -%}
-              {%- if block.settings.text != blank -%}
-                <p class="{{ block.settings.heading_tag }}" {{ block.shopify_attributes }}>{{ block.settings.text }}</p>
-              {%- endif -%}
+                    <svg fill="none" width="48" height="48" viewBox="0 0 48 48">
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M48 24c0 13.255-10.745 24-24 24S0 37.255 0 24 10.745 0 24 0s24 10.745 24 24Zm-18 0-9-6.6v13.2l9-6.6Z" fill="{{ block.settings.icon_color }}"/>
+                    </svg>
+                  </button>
+                {%- endunless -%}
 
-            {%- when 'richtext' -%}
-              {%- if block.settings.content != blank -%}
-                <div {{ block.shopify_attributes }}>
-                  {{- block.settings.content -}}
-                </div>
-              {%- endif -%}
-          {%- endcase -%}
-        {%- endfor -%}
+              {%- when 'subheading' -%}
+                {%- if block.settings.text != blank -%}
+                  <p class="h6" {{ block.shopify_attributes }}>{{ block.settings.text }}</p>
+                {%- endif -%}
+
+              {%- when 'heading' -%}
+                {%- if block.settings.text != blank -%}
+                  <p class="{{ block.settings.heading_tag }}" {{ block.shopify_attributes }}>{{ block.settings.text }}</p>
+                {%- endif -%}
+
+              {%- when 'richtext' -%}
+                {%- if block.settings.content != blank -%}
+                  <div {{ block.shopify_attributes }}>
+                    {{- block.settings.content -}}
+                  </div>
+                {%- endif -%}
+            {%- endcase -%}
+          {%- endfor -%}
+        </div>
       </div>
-    </div>
-  {%- endif -%}
-</div>
-
+    {%- endif -%}
+  </div>
+{%endif%}
 {% schema %}
 {
   "name": "t:sections.video.name",
