--- a/assets/main.css
+++ b/assets/main.css
@@ -693,105 +693,80 @@
 }
 
 .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=title-with-rating] {
-  -webkit-margin-after: 0.813rem;
-          margin-block-end: 0.813rem;
+  margin-block-end: 0.813rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=title-with-rating] {
-    -webkit-margin-after: 1.188rem;
-            margin-block-end: 1.188rem;
+    margin-block-end: 1.188rem;
   }
 }
 .template--product-Yonder-dev .product-info__block-list .product-info-type-text:nth-child(-n+2) {
-  -webkit-margin-before: 0rem;
-          margin-block-start: 0rem;
-  -webkit-margin-after: 1.063rem;
-          margin-block-end: 1.063rem;
+  margin-block-start: 0rem;
+  margin-block-end: 1.063rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .product-info-type-text:nth-child(-n+2) {
-    -webkit-margin-after: 1.063rem;
-            margin-block-end: 1.063rem;
+    margin-block-end: 1.063rem;
   }
 }
 .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=price] {
-  -webkit-margin-before: 0rem;
-          margin-block-start: 0rem;
-  -webkit-margin-after: 1.25rem;
-          margin-block-end: 1.25rem;
+  margin-block-start: 0rem;
+  margin-block-end: 1.25rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=price] {
-    -webkit-margin-after: 1.375rem;
-            margin-block-end: 1.375rem;
+    margin-block-end: 1.375rem;
   }
 }
 .template--product-Yonder-dev .product-info__block-list .product-info-type-text:nth-child(even) {
-  -webkit-margin-before: 0rem;
-          margin-block-start: 0rem;
-  -webkit-margin-after: 1.75rem;
-          margin-block-end: 1.75rem;
+  margin-block-start: 0rem;
+  margin-block-end: 1.75rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .product-info-type-text:nth-child(even) {
-    -webkit-margin-after: 1.375rem;
-            margin-block-end: 1.375rem;
+    margin-block-end: 1.375rem;
   }
 }
 .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=product-variations] {
-  -webkit-margin-before: 0rem;
-          margin-block-start: 0rem;
-  -webkit-margin-after: 1.625rem;
-          margin-block-end: 1.625rem;
+  margin-block-start: 0rem;
+  margin-block-end: 1.625rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=product-variations] {
-    -webkit-margin-after: 1.188rem;
-            margin-block-end: 1.188rem;
+    margin-block-end: 1.188rem;
   }
 }
 .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=buy-buttons-with-quantity] {
-  -webkit-margin-before: 0rem;
-          margin-block-start: 0rem;
-  -webkit-margin-after: 2.25rem;
-          margin-block-end: 2.25rem;
+  margin-block-start: 0rem;
+  margin-block-end: 2.25rem;
 }
 .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=buy-buttons-with-quantity] .scroll-customize-wrapper-mrb {
-  -webkit-margin-after: 1.438rem;
-          margin-block-end: 1.438rem;
+  margin-block-end: 1.438rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=buy-buttons-with-quantity] {
-    -webkit-margin-after: 2.188rem;
-            margin-block-end: 2.188rem;
+    margin-block-end: 2.188rem;
   }
   .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=buy-buttons-with-quantity] .scroll-customize-wrapper-mrb {
-    -webkit-margin-after: 1.563rem;
-            margin-block-end: 1.563rem;
+    margin-block-end: 1.563rem;
   }
 }
 .template--product-Yonder-dev .product-info__block-list .block-product-feature_with_icon_v2 {
-  -webkit-margin-before: 0rem;
-          margin-block-start: 0rem;
-  -webkit-margin-after: 2.313rem;
-          margin-block-end: 2.313rem;
+  margin-block-start: 0rem;
+  margin-block-end: 2.313rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .block-product-feature_with_icon_v2 {
-    -webkit-margin-after: 2.063rem;
-            margin-block-end: 2.063rem;
+    margin-block-end: 2.063rem;
   }
 }
 .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=accordion-group] {
-  -webkit-margin-before: 0rem;
-          margin-block-start: 0rem;
-  -webkit-margin-after: 2.05rem;
-          margin-block-end: 2.05rem;
+  margin-block-start: 0rem;
+  margin-block-end: 2.05rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=accordion-group] {
-    -webkit-margin-after: 2.05rem;
-            margin-block-end: 2.05rem;
+    margin-block-end: 2.05rem;
   }
 }
 
@@ -855,8 +830,7 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
   }
 }
 .multi-column-with-text-v2 .main-stack-container .section-header .prose p {
-  -webkit-margin-before: 1rem;
-          margin-block-start: 1rem;
+  margin-block-start: 1rem;
   color: #343434;
   text-align: center;
   font-family: Nunito Sans;
@@ -910,8 +884,7 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
   }
 }
 .multi-column-with-text-v2 .main-stack-container .multi-column__item .text-part .content-part {
-  -webkit-margin-before: 0.688rem;
-          margin-block-start: 0.688rem;
+  margin-block-start: 0.688rem;
 }
 .multi-column-with-text-v2 .main-stack-container .multi-column__item .text-part .content-part p {
   color: #343434;
@@ -954,6 +927,11 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
 .shopify-section--text-with-icons-v2 .main-stack-container {
   row-gap: 3.438rem;
 }
+@media screen and (max-width: 769px) {
+  .shopify-section--text-with-icons-v2 .main-stack-container {
+    row-gap: 2.563rem;
+  }
+}
 .shopify-section--text-with-icons-v2 .section-header .prose p {
   color: #343434;
   text-align: center;
@@ -962,8 +940,12 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  -webkit-margin-before: 1.5rem;
-          margin-block-start: 1.5rem;
+  margin-block-start: 1.5rem;
+}
+@media screen and (max-width: 769px) {
+  .shopify-section--text-with-icons-v2 .section-header .prose p {
+    font-size: 16px;
+  }
 }
 .shopify-section--text-with-icons-v2 .section-header .prose h2 {
   color: #000;
@@ -985,15 +967,25 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
   text-transform: inherit;
   margin-block: 0px;
 }
+@media screen and (max-width: 769px) {
+  .shopify-section--text-with-icons-v2 .section-header .prose h2 {
+    font-size: 24px;
+    letter-spacing: 4.8px;
+  }
+}
 .shopify-section--text-with-icons-v2 .text-with-icons .text-with-icons__item {
   min-width: 21.875rem;
   border-radius: 22px;
   border: 1px solid #343434;
   background: #EFEFEF;
-  -webkit-padding-before: 2.563rem;
-          padding-block-start: 2.563rem;
-  -webkit-padding-after: 2rem;
-          padding-block-end: 2rem;
+  padding-block-start: 2.563rem;
+  padding-block-end: 2rem;
+}
+@media screen and (max-width: 769px) {
+  .shopify-section--text-with-icons-v2 .text-with-icons .text-with-icons__item {
+    padding-block-start: 2.563rem;
+    padding-block-end: 2rem;
+  }
 }
 .shopify-section--text-with-icons-v2 .text-with-icons .text-with-icons__item .constrained-image {
   border-radius: 22px;
@@ -1009,12 +1001,24 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
   align-items: center;
   row-gap: 20px;
 }
+@media screen and (max-width: 769px) {
+  .shopify-section--text-with-icons-v2 .text-with-icons .text-with-icons__item .content-part {
+    padding-inline: 2rem;
+    row-gap: 16px;
+  }
+}
 .shopify-section--text-with-icons-v2 .swiper {
   width: 100%;
   height: 100%;
+  opacity: 0;
 }
 .shopify-section--text-with-icons-v2 .swiper .swiper-wrapper {
-  margin-bottom: 3.5rem;
+  margin-bottom: 4.5rem;
+}
+@media screen and (max-width: 769px) {
+  .shopify-section--text-with-icons-v2 .swiper .swiper-wrapper {
+    margin-bottom: 3.5rem;
+  }
 }
 .shopify-section--text-with-icons-v2 .swiper .swiper-pagination {
   bottom: 0;
@@ -1028,4 +1032,7 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
 }
 .shopify-section--text-with-icons-v2 .swiper .swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
   background: #0500FF;
+}
+.shopify-section--text-with-icons-v2 .swiper.ready-slider {
+  opacity: 1;
 }
