--- a/src/scss/components/icon-with-text.scss
+++ b/src/scss/components/icon-with-text.scss
@@ -7,6 +7,9 @@
     }
     .main-stack-container{
         row-gap: 3.438rem;
+        @media screen and (max-width: 769px) {
+            row-gap: 2.563rem;
+        }
     }
     .section-header{
         .prose{
@@ -19,6 +22,9 @@
                 font-weight: 400;
                 line-height: normal;
                 margin-block-start: 1.5rem;
+                @media screen and (max-width: 769px) {
+                    font-size: 16px;
+                }
             }
             h2{
                 color: #000;
@@ -39,6 +45,10 @@
                     text-transform: inherit;
                     margin-block: 0px;
                 }
+                @media screen and (max-width: 769px) {
+                    font-size: 24px;
+                    letter-spacing: 4.8px;
+                }
             }
         }
     }
@@ -51,6 +61,11 @@
             background: #EFEFEF;
             padding-block-start: 2.563rem;
             padding-block-end: 2rem;
+            @media screen and (max-width: 769px) {
+                //min-width:18.75rem;
+                padding-block-start: 2.563rem;
+                padding-block-end: 2rem;
+            }
 
             .constrained-image{
                 border-radius: 22px;
@@ -65,6 +80,10 @@
                 flex-direction: column;
                 align-items: center;
                 row-gap: 20px;
+                @media screen and (max-width: 769px) {
+                    padding-inline: 2rem;
+                    row-gap: 16px;
+                }
             }
         }
     }
@@ -72,8 +91,12 @@
     .swiper{
         width: 100%;
         height: 100%;
+        opacity: 0;
         .swiper-wrapper{
-            margin-bottom: 3.5rem;
+            margin-bottom: 4.5rem;
+            @media screen and (max-width: 769px) {
+                margin-bottom: 3.5rem;
+            }
         }
         .swiper-pagination{
             bottom: 0;
@@ -88,5 +111,8 @@
                 background: #0500FF;
             }
         }
+    }
+    .swiper.ready-slider{
+        opacity: 1;
     }
 }
