working on compare table

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,3 +5,4 @@ $active-color:#0500FF;
 @import 'components/scroll-slider.scss';
 @import 'components/image-with-text.scss';
 @import 'components/icon-with-text.scss';
+@import 'components/caomparatif-table.scss';
