--- a/assets/main.css
+++ b/assets/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @media screen and (min-width: 1000px) {
   .template--product-Yonder-dev .sticky-product-gallery product-gallery {
     --product-gallery-thumbnail-size: 6.25rem;
@@ -1035,4 +1036,215 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
 }
 .shopify-section--text-with-icons-v2 .swiper.ready-slider {
   opacity: 1;
+}
+
+.comparatif-table-section {
+  --section-vertical-spacing: var(--section-without-border-vertical-spacing);
+  --section-vertical-spacing-tight: var(--section-without-border-vertical-spacing-tight);
+}
+.comparatif-table-section .section-header .prose p {
+  color: #343434;
+  text-align: center;
+  font-family: Nunito Sans;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-block-start: 1.5rem;
+}
+@media screen and (max-width: 769px) {
+  .comparatif-table-section .section-header .prose p {
+    font-size: 16px;
+  }
+}
+.comparatif-table-section .section-header .prose h2 {
+  color: #000;
+  text-align: center;
+  font-family: Montserrat;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 6.4px;
+  text-transform: uppercase;
+}
+.comparatif-table-section .section-header .prose h2 p {
+  font-family: inherit;
+  font-size: inherit;
+  font-weight: inherit;
+  color: inherit;
+  letter-spacing: inherit;
+  text-transform: inherit;
+  margin-block: 0px;
+}
+@media screen and (max-width: 769px) {
+  .comparatif-table-section .section-header .prose h2 {
+    font-size: 24px;
+    letter-spacing: 4.8px;
+  }
+}
+@media screen and (max-width: 990px) {
+  .comparatif-table-section .comparison-table {
+    /* Track */
+  }
+  .comparatif-table-section .comparison-table .table-wrapper:not(.u-NoScrollbar) {
+    padding-bottom: 22Px;
+  }
+  .comparatif-table-section .comparison-table .table-wrapper:not(.u-NoScrollbar)::-webkit-scrollbar {
+    height: 2px;
+  }
+  .comparatif-table-section .comparison-table .table-wrapper:not(.u-NoScrollbar)::-webkit-scrollbar-track {
+    background: #B0B0B0;
+  }
+  .comparatif-table-section .comparison-table .table-wrapper:not(.u-NoScrollbar)::-webkit-scrollbar-thumb {
+    background: #000;
+  }
+  .comparatif-table-section .comparison-table .table-wrapper::-webkit-scrollbar-track {
+    margin: 0px !important;
+  }
+}
+.comparatif-table-section .icons-row__headings .icons-row__subheading {
+  margin-bottom: 20px;
+}
+@media (max-width: 768px) {
+  .comparatif-table-section .icons-row__headings .icons-row__subheading {
+    margin-bottom: 15px;
+  }
+}
+.comparatif-table-section table {
+  border-collapse: separate;
+  border-spacing: 0;
+  border: none;
+  border-radius: 20px;
+  table-layout: initial;
+  /*第一欄第一列：左上*/
+  /*第一欄最後列：左下*/
+  /*最後欄第一列：右上*/
+  /*最後欄第一列：右下*/
+}
+@media only screen and (max-width: 990px) {
+  .comparatif-table-section table {
+    min-width: 900px;
+    table-layout: auto;
+  }
+}
+@media only screen and (max-width: 660px) {
+  .comparatif-table-section table {
+    min-width: 500px;
+  }
+}
+.comparatif-table-section table tr {
+  border: 0.5px solid #CCC;
+}
+.comparatif-table-section table td {
+  border: 0.5px solid #CCC;
+}
+.comparatif-table-section table td img {
+  height: 37px;
+  width: auto;
+  vertical-align: middle;
+  display: initial;
+}
+@media only screen and (max-width: 768px) {
+  .comparatif-table-section table td img {
+    height: 20px;
+  }
+}
+.comparatif-table-section table td svg {
+  vertical-align: middle;
+  width: 36px;
+  display: initial;
+  height: 36px;
+}
+@media only screen and (max-width: 768px) {
+  .comparatif-table-section table td svg {
+    width: 25px;
+    height: 25px;
+  }
+}
+.comparatif-table-section table td .uncheck-icon {
+  width: 23px;
+  height: 23px;
+}
+.comparatif-table-section table tr:first-child td:first-child {
+  border-top-left-radius: 20px;
+}
+@media only screen and (max-width: 768px) {
+  .comparatif-table-section table tr:first-child td:first-child {
+    width: 6.75rem;
+  }
+}
+.comparatif-table-section table tr:last-child td:first-child {
+  border-bottom-left-radius: 20px;
+}
+.comparatif-table-section table tr:first-child td:last-child {
+  border-top-right-radius: 20px;
+}
+.comparatif-table-section table tr:last-child td:last-child {
+  border-bottom-right-radius: 20px;
+}
+.comparatif-table-section .comparison-table .th-ligne td {
+  color: #1C1C1C;
+  text-align: center;
+  font-family: Nunito Sans;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px; /* 140% */
+  letter-spacing: 4px;
+  text-transform: uppercase;
+}
+.comparatif-table-section .comparison-table .th-ligne .first-tab-item {
+  color: #858585;
+  font-family: Nunito Sans;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 34.803px; /* 174.014% */
+  text-transform: uppercase;
+  text-align: start;
+}
+.comparatif-table-section .comparison-table td {
+  padding: 1rem;
+  color: #1C1C1C;
+  font-family: Nunito Sans;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 34.803px; /* 174.014% */
+  text-transform: uppercase;
+}
+.comparatif-table-section .comparison-table td:not(:first-child) {
+  text-align: center;
+}
+@media only screen and (min-width: 991px) {
+  .comparatif-table-section .comparison-table tr:first-child td {
+    padding: 1rem 1.3rem;
+  }
+}
+.comparatif-table-section .comparison-table tr:first-child td:nth-child(2), .comparatif-table-section .comparison-table tr:first-child td:nth-child(3) {
+  max-width: 250px;
+  width: 250px;
+  padding-inline: 3.313rem;
+}
+.comparatif-table-section .comparison-table th {
+  text-align: center;
+}
+@media (min-width: 48rem) {
+  .comparatif-table-section .comparison-table {
+    font-size: 0.875rem;
+  }
+  .comparatif-table-section .comparison-table th,
+  .comparatif-table-section .comparison-table td {
+    padding: 0.5rem 1rem;
+  }
+}
+@media (min-width: 60rem) {
+  .comparatif-table-section .comparison-table {
+    font-size: 1rem;
+  }
+  .comparatif-table-section .comparison-table th,
+  .comparatif-table-section .comparison-table td {
+    padding: 2rem 1.3rem;
+  }
 }
